<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="introduction">音乐播放器</string>
    <string name="before"> 〈〈 </string>
    <string name="volumeShow"> 音量调节 </string>
    <string name="play"> play </string>
    <string name="after">〉〉</string>
    <string name="first">|〈</string>
    <string name="last">〉|</string>
    <string name="oneCycle">单曲循环</string>
    <string name="listCycle">列表循环</string>
    <string name="listSeq">顺序播放</string>
    <string name="random">随机播放</string>
    <string name="selectFile">选择文件</string>
    <string name="title_activity_file_choose">FileChoose</string>
    <string name="ok">OK</string>
    <string name="back">返回</string>
    <string name="noneFile">空</string>

</resources>
